--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 							<img src="img/web/code.jpg" alt="牛卡官网二维码"/>
 						</div>
 						<div class="btn_box clearfix">
-							<a href="javascript:;" class="btn_android png" title="下载安卓版">下载安卓版</a>
-							<a href="javascript:;" class="btn_ios png" title="下载IOS版">下载IOS版</a>
+							<--<a href="javascript:;" class="btn_android png" title="下载安卓版">下载安卓版</a>
+							<a href="javascript:;" class="btn_ios png" title="下载IOS版">下载IOS版</a>-->
 						</div>
 						<p class="txt_msg clearfix">
-							<span class="f_left">最近更新：2018.06.20</span>
+							<span class="f_left">最近更新：2019.06.20</span>
 						</p>
 					</div>
 					<span class="ico_p1 png"></span>
