--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<li class="page page1 show">
 			<div class="l_wrap">
 				<div class="content">
-					<div class="value_box clearfix">
+					<--<div class="value_box clearfix">
 						<h1 class="web_title hide_txt png"><em class="png">牛卡<i class="png">V4.0</i></em>—最美的文艺卡片</h1>
 						<h1 class="wap_title">
 							<em>人手必备的装逼利器</em>一秒变文艺小清新
@@ -55,13 +55,13 @@
 							<img src="img/web/code.jpg" alt="牛卡官网二维码"/>
 						</div>
 						<div class="btn_box clearfix">
-							<--<a href="javascript:;" class="btn_android png" title="下载安卓版">下载安卓版</a>
-							<a href="javascript:;" class="btn_ios png" title="下载IOS版">下载IOS版</a>-->
+							<a href="javascript:;" class="btn_android png" title="下载安卓版">下载安卓版</a>
+							<a href="javascript:;" class="btn_ios png" title="下载IOS版">下载IOS版</a>
 						</div>
 						<p class="txt_msg clearfix">
 							<span class="f_left">最近更新：2019.06.20</span>
 						</p>
-					</div>
+					</div>-->
 					<span class="ico_p1 png"></span>
 				</div>
 			</div>
