--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>酷吧软件 - 牛卡App</title>
+<title>酷吧软件 - 美卡</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-<meta name="keywords" content="牛卡App,图片处理,照片处理">
+<meta name="keywords" content="美卡,图片处理,照片处理">
 <meta name="description" content="文艺美图模板搭配清新美文，让你瞬间跻身文艺界！">
 <script>
 (function(){
@@ -41,8 +41,8 @@
 		<li class="page page1 show">
 			<div class="l_wrap">
 				<div class="content">
-					<--<div class="value_box clearfix">
-						<h1 class="web_title hide_txt png"><em class="png">牛卡<i class="png">V4.0</i></em>—最美的文艺卡片</h1>
+					<div class="value_box clearfix">
+						<h1 class="web_title hide_txt png"><em class="png">美卡<i class="png">V4.0</i></em>—最美的文艺卡片</h1>
 						<h1 class="wap_title">
 							<em>人手必备的装逼利器</em>一秒变文艺小清新
 							<span class="txt_version"><em>牛卡APP安卓版V4.0</em></span>
@@ -52,16 +52,15 @@
 							<li>让你瞬间跻身文艺界的装逼神器</li>
 						</ul>
 						<div class="msg_box">
-							<img src="img/web/code.jpg" alt="牛卡官网二维码"/>
+							
 						</div>
 						<div class="btn_box clearfix">
-							<a href="javascript:;" class="btn_android png" title="下载安卓版">下载安卓版</a>
-							<a href="javascript:;" class="btn_ios png" title="下载IOS版">下载IOS版</a>
+							
 						</div>
 						<p class="txt_msg clearfix">
 							<span class="f_left">最近更新：2019.06.20</span>
 						</p>
-					</div>-->
+					</div>
 					<span class="ico_p1 png"></span>
 				</div>
 			</div>
