--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<h1 class="web_title hide_txt png"><em class="png">美卡<i class="png">V4.0</i></em>—最美的文艺卡片</h1>
 						<h1 class="wap_title">
 							<em>人手必备的装逼利器</em>一秒变文艺小清新
-							<span class="txt_version"><em>牛卡APP安卓版V4.0</em></span>
+							<span class="txt_version"><em>美卡 V4.0</em></span>
 						</h1>
 						<ul class="list_brief">
 							<li>免费的图片处理软件</li>
